--- a/magicMirror.html
+++ b/magicMirror.html
@@ -3,61 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
-	<link rel="stylesheet" href="">
-<style>
-    @media screen and (max-width: 768px) and (min-width: 0px) {
-        html {
-            font-size: 10px;
-        }
-    }
-    @media screen and (max-width: 1024px) and (min-width: 768px ){
-        html {
-            font-size: 13px;
-        }
-    }
-	html,body{
-		height: 100%;
-		padding: 0;
-		margin: 0;
-	}
-	
-	.wrap{
-		width: 100%;
-		height: 100%;
-		background: skyblue;
-
-	}
-	.title{
-		width: 11.5rem;
-		height: 4rem;
-		position:relative;
-    	left:50%;
-    	transform:translate(-50%);
-	}
-	img{
-		width: 50px;
-		height: 50px;
-		margin: 0 auto;
-	}
-	p{
-		width: 75%;
-		font-size: 1.5rem; 
-		margin: 0 auto;
-		color: white;
-	}
-</style>
+	<link rel="stylesheet" href="magicMirror.css">
 </head>
 <body>
 	<div class="wrap">
-		<img class="title" src="image/magicMirror/title.png" alt="">
-		<p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
-		<div>
+		<img class="icon" src="image/magicMirror/icon.png" alt="">
+		<img class="banner" src="image/magicMirror/title.png" alt="">
+		<p class="main">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
+		<div class="left">
 			<img src="image/magicMirror/logo2.png" alt="">
+			<p>22222222</p>
 		</div>
-		<div>
-		<img src="image/magicMirror/logo1.png" alt="">
+		<div class="right">
+			<img src="image/magicMirror/logo1.png" alt="">
+			<p>BJPTTeng</p>
 		</div>
 	</div>
 </body>
