--- a/magicMirror.html
+++ b/magicMirror.html
@@ -8,18 +8,16 @@
 	<link rel="stylesheet" href="magicMirror.css">
 </head>
 <body>
-	<div class="wrap">
-		<img class="icon" src="image/magicMirror/icon.png" alt="">
-		<img class="banner" src="image/magicMirror/title.png" alt="">
-		<p class="main">葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p>
-		<div class="left">
-			<img src="image/magicMirror/logo2.png" alt="">
-			<p>22222222</p>
-		</div>
-		<div class="right">
-			<img src="image/magicMirror/logo1.png" alt="">
-			<p>BJPTTeng</p>
-		</div>
+	<img class="icon" src="image/magicMirror/icon.png" alt="">
+	<img class="banner" src="image/magicMirror/title.png" alt="">
+	<div class="main"><p>葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏，捉鬼，炸狼堡等多种聚会游戏，以下线下聚会桌游道具。</p></div>
+	<div class="left">
+		<img src="image/magicMirror/logo2.png" alt="">
+		<p>22222222</p>
+	</div>
+	<div class="right">
+		<img src="image/magicMirror/logo1.png" alt="">
+		<p>BJPTTeng</p>
 	</div>
 </body>
 </html>
